--- a/source/_posts/中间人攻击.md
+++ b/source/_posts/中间人攻击.md
@@ -1,7 +1,7 @@
 # 中间人攻击
 * 一次正常RSA 加解密流程：用户发起连接请求，服务器发送公钥给客户端，客户端使用服务端公钥加密相关信息并发送给服务端。服务端使用私钥解密，获取信息进行验证及处理。
+<!--more-->
 ![rsa_authentication](https://i.loli.net/2019/01/28/5c4f031052614.gif)
-
 * 中间人攻击：中间人截取用户验证请求，发送中间人公钥给客户端。客户端利用假公钥加密的信息就会被中间人解密。中间人拿到客户端信息再去和服务端交互。服务端返回的数据会先经过中间人再到用户，这样用户的数据就得不到安全保障。因为中间人可以修改用户数据。
 ![man_in_the_middle_attack](https://i.loli.net/2019/01/28/5c4f03107259c.gif)
 
