--- a/source/_posts/中间人攻击.md
+++ b/source/_posts/中间人攻击.md
@@ -1,9 +1,9 @@
 ---
 title: 中间人攻击
 comments: true
-categories:
-- 密码学
-- RSA
+toc: true
+top: 15489908341
+declare: true
 tags:
   - RSA
   - 中间人攻击
@@ -12,7 +12,6 @@ updated:
 permalink:
 ---
 
-# 中间人攻击
 * 一次正常RSA 加解密流程：用户发起连接请求，服务器发送公钥给客户端，客户端使用服务端公钥加密相关信息并发送给服务端。服务端使用私钥解密，获取信息进行验证及处理。
 <!--more-->
 ![rsa_authentication](https://i.loli.net/2019/01/28/5c4f031052614.gif)
