--- a/source/_posts/绿皮书.md
+++ b/source/_posts/绿皮书.md
@@ -14,4 +14,4 @@ The world's full of lonely people afraid to make the first step!
 
 世上有太多的人害怕踏出第一步!
 
-![Green Book](https://img3.doubanio.com/view/photo/l/public/p2549144672.webp)
+![Green Book](https://img3.doubanio.com/view/photo/l/public/p2549144672.jpg)
