文章:Runtime-对象创建和初始化流程

--- a/source/_posts/objc750-1编译.md
+++ b/source/_posts/objc750-1编译.md
@@ -13,11 +13,12 @@ date: 2019-03-09 15:54:17
 top:
 ---
 
-　　本文内容：`macOS 10.14.1`下编译`objc4_750.1`源码。笔者不能保证在其他系统版本下编译成功，但是解决方法大同小异。
+　　本文内容：`macOS 10.14.3`下编译`objc4_750.1`源码。笔者不能保证在其他系统版本下编译成功，但是解决方法大同小异。
 　　<!--more-->
 ### 编译环境
 * macOS 10.14.1
 * Xcode 10.1
+* Objc-750.1, [可编译的版本](https://github.com/roastduckcd/Objc4_750_1.git)
 
 ### 准备工作
 * [macOS 10.14.1 所有源码目录](https://opensource.apple.com/release/macos-10141.html)
