HTML学习笔记之标签实践：样式相关

--- a/source/_posts/逆向实战录一.md
+++ b/source/_posts/逆向实战录一.md
@@ -5,17 +5,16 @@ toc: true
 copyright: true
 declare: true
 categories:
-  - 一级分类
-  - 二级分类
+  - iOS
+  - 逆向
 tags:
-  - 同级tag1
-  - 同级tag2
+  - 逆向
 date: 2019-04-10 01:33:45
 top:
 ---
-<!--more-->
-本篇记录一下在 Mac 上逆向某付费 APP 的过程。仅与读者探讨技术，请勿将逆向后的 APP 商用。请支持正版！
 
+本篇记录一下在 Mac 上逆向某付费 APP 的过程。仅与读者探讨技术，请勿将逆向后的 APP 商用。请支持正版！
+<!--more-->
 ### 工具准备
 * Xcode: 附加进程动态调试，UI 调试
 * restore-symbol: [符号表恢复](https://github.com/tobefuturer/restore-symbol)
