JavaScript-自定义对象

--- a/source/_posts/逆向实战录一.md
+++ b/source/_posts/逆向实战录一.md
@@ -13,7 +13,7 @@ date: 2019-04-10 01:33:45
 top:
 ---
 
-本篇记录一下在 Mac 上逆向某付费 APP 的过程。仅与读者探讨技术，请勿将逆向后的 APP 商用。请支持正版！
+本篇记录一下在 Mac 上逆向 MWeb 付费 APP 的过程。仅与读者探讨技术，请勿将逆向后的 APP 商用。请支持正版！
 <!--more-->
 ### 工具准备
 * Xcode: 附加进程动态调试，UI 调试
