文章：逆向实战录三-DYLD-INSERT-LIBRARIES.md

--- a/source/_posts/逆向实战录一.md
+++ b/source/_posts/逆向实战录一.md
@@ -16,6 +16,9 @@ top:
 本篇记录一下在 Mac 上逆向某付费 APP 的过程。仅与读者探讨技术，请勿将逆向后的 APP 商用。请支持正版！
 <!--more-->
 
+[MWeb逆向：汇编](http://roastduck.xyz/article/%E9%80%86%E5%90%91%E5%AE%9E%E6%88%98%E5%BD%95%E4%B8%80.html)
+[MWeb逆向：MonkeyDev](http://roastduck.xyz/article/%E9%80%86%E5%90%91%E5%AE%9E%E6%88%98%E5%BD%95%E4%BA%8CMWeb-substitute.html)
+[MWeb 逆向：DYLD_INSET_LIBRARIES](http://roastduck.xyz/article/%E9%80%86%E5%90%91%E5%AE%9E%E6%88%98%E5%BD%95%E4%B8%89-DYLD_INSERT_LIBRARIES.html)
 ### 工具准备
 * Xcode: 附加进程动态调试，UI 调试
 * restore-symbol: [符号表恢复](https://github.com/tobefuturer/restore-symbol)
